<resources>
    <string name="app_name">QuizSpeed</string>
    <string name="main_title_textbox">QuizSpeed</string>
    <string name="nom_joueur1">Nom du premier joueur</string>
    <string name="nom_joueur2">Nom du deuxième joueur</string>
    <string name="main_strart">Commencer</string>
    <string name="main_ajoutJoueur">Ajouter un joueur</string>
    <string name="gagne">Gagné !</string>
    <string name="perdu">Perdu !</string>
    <string name="egalite">Egalité !</string>
    <string name="go">Go !</string>
    <string name="Question_Vrai">Vrai</string>
    <string name="Question_reponse">Veuillez saisir si la réponse est vrai</string>
    <string name="Question_question">Veuillez saisir une question</string>
    <string name="questions">Questions</string>
    <string name="param_tre">Paramètre</string>
    <string name="parametre_temps">Veuillez chosir le temps entre chaque questions</string>
    <string name="Vitesse">Vitesse entre chaque questions</string>
    <string name="parametre_nbreQuestion">Veuillez choisir le nombre de question</string>
    <string name="valider">Valider</string>
    <string name="valider">Valider</string>
</resources>