<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/questions"
            android:textSize="@dimen/main_titre_size"
            android:textColor="@color/textInputLayoutBorder"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_standard"
            android:text="@string/Question_question"
            android:textSize="@dimen/main_texte_size"
            android:visibility="visible"/>
        <com.google.android.material.textfield.TextInputEditText
            app:helperTextEnabled="true"
            app:helperText="question"
            android:layout_width="match_parent"
            android:id="@+id/question_question"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_texte_size"
            android:maxLines="1"
            android:textAlignment="center"
            android:inputType="text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_standard"
            android:text="@string/Question_reponse"
            android:textSize="@dimen/main_texte_size"
            android:visibility="visible"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchQuestion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/Question_Vrai"
            android:layout_gravity="center"
            android:textSize="@dimen/main_texte_size"/>



        <Button
            android:id="@+id/question_btnValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/valider"/>


    </LinearLayout>
</LinearLayout>

