<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_menu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->

    </androidx.core.widget.NestedScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/main_title_textbox"
            android:textSize="@dimen/main_titre_size"
            android:textColor="@color/textInputLayoutBorder"
            android:textStyle="bold" />
    <Button
        android:id="@+id/containedButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/main_ajoutJoueur" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_standard"
        android:text="@string/nom_joueur1"
        android:textSize="@dimen/main_texte_size"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.Quiz.TextInputLayer.Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_standard"
        android:layout_marginEnd="@dimen/main_margin_standard"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_joueur1_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_texte_size"
            android:maxLines="1"
            android:textAlignment="center"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_standard"
        android:text="@string/nom_joueur2"
        android:textSize="@dimen/main_texte_size"
        android:visibility="invisible"/>

    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.Quiz.TextInputLayer.Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_standard"
        android:layout_marginEnd="@dimen/main_margin_standard"
        android:visibility="invisible">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_joueur2_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_texte_size"
            android:maxLines="1"
            android:textAlignment="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/containedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/main_strart" />
    </LinearLayout>

</LinearLayout>